<resources>
    <string name="app_name">JetChat</string>
    <string name="person_name">Elena</string>
    <string name="message">How are you?</string>
    <string name="time">08:20 AM</string>
    <string name="password">Enter your Password</string>
    <string name="email">Enter your Email</string>
    <string name="login">Log in</string>
    <string name="login_with_google">Login with Google</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_haven_an_account">Already haven an account ?</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="dont_have_an_account">Don\'t have an account ?</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="status">online</string>
    <string name="msg">Message</string>
</resources>