<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="35dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/login"
        android:letterSpacing="0.04"
        android:textColor="#1c1b1b"
        android:textStyle="bold"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img" />


    <!--    email-->
    <EditText
        android:id="@+id/etEmailLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_box"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:nextFocusDown="@id/etPasswordLA"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="#292727"
        android:textColorHint="#292727"
        android:textSize="18sp" />

    <!--    password-->
    <EditText
        android:id="@+id/etPasswordLA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_box"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:fontFamily="@font/montserrat"
        android:minHeight="48dp"
        android:nextFocusDown="@id/btnLogin"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:textColor="#292727"
        android:textColorHint="#292727"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">


        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_medium"
            android:text="Remember Me"
            android:letterSpacing="0.03"
            android:textColor="#424242"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#ababab"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp" />

    </LinearLayout>


    <!--    login button-->
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="20dp"
        android:background="@drawable/btn_login"
        android:paddingVertical="10dp"
        android:text="@string/login"
        android:textColor="#1c1b1b"
        android:textSize="20dp"
        android:textAllCaps="false" />


    <!--    google sign in button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="Or connect with"
            android:textColor="#ababab"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    signUp-->

    <LinearLayout
        android:id="@+id/btnGoogleLogin"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_box"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:paddingLeft="2dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/login_with_google"
            android:textColor="#424242"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    sign up message-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/dont_have_an_account"
            android:textColor="#ababab"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvSignUpLA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:letterSpacing="0.04"
            android:text="@string/sign_up"
            android:textColor="#424242"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"/>
    </LinearLayout>


</LinearLayout>
