<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:background="@color/white"
    android:paddingHorizontal="10dp"
    android:paddingBottom="30dp">

    <!--        profile-->
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/imgProfileCI"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:scaleType="centerCrop"
            android:src="@drawable/user_profile" />

    </androidx.cardview.widget.CardView>

    <!--    info-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp">

        <!--        person name-->
        <TextView
            android:id="@+id/tvNameCI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/person_name"
            android:textColor="#424242"
            android:textSize="19sp" />

        <!--        last message-->
        <TextView
            android:id="@+id/tvLastMessageCI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/montserrat"
            android:text="@string/message"
            android:textColor="#ababab"
            android:textSize="13sp" />

        <!--        time-->
        <TextView
            android:id="@+id/tvLastSeenCI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/time"
            android:textColor="#ababab"
            android:textSize="10sp" />


        <!--       badge/tick status-->

    </RelativeLayout>

</LinearLayout>