<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e3e6"
    android:orientation="vertical"
    tools:context=".ChatActivity">

    <!--    action bar-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#5ba0f0"
        android:padding="10dp">

        <!--        back button-->
        <ImageView
            android:id="@+id/imgBackCA"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_back" />


        <!--        chat user profile -->
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="25dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/imgProfileCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/user_profile" />

        </androidx.cardview.widget.CardView>

        <!--        user info-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="vertical">


            <!--        person name-->
            <TextView
                android:id="@+id/tvNameCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/person_name"
                android:textColor="#424242"
                android:textSize="22sp" />

            <!--     user  status-->
            <TextView
                android:id="@+id/tvStatusCA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/status"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <!--    messages recycler view-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMessageListCA"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:listitem="@layout/sender_chat"/>

    <!--    input bar-->
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:background="@drawable/input_box"
        android:gravity="center_vertical"
        android:paddingVertical="10dp"
        android:layout_marginBottom="3dp">

        <!--    email-->

        <!--        send button-->

        <EditText
            android:id="@+id/etInput"
            android:layout_width="304dp"
            android:layout_height="37dp"
            android:layout_marginEnd="13dp"
            android:layout_weight="0.8"
            android:background="#ababab"
            android:hint="@string/msg"
            android:inputType="textMultiLine"
            android:paddingHorizontal="15dp"
            android:textColor="@color/white"
            android:textColorHint="#fcebeb"
            android:textSize="17sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSendCA"
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/send2"
            app:backgroundTint="@color/white"
            app:fabCustomSize="48dp"
            app:maxImageSize="19dp"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>

</LinearLayout>